--- a/web/templates/search.html
+++ b/web/templates/search.html
@@ -87,14 +87,14 @@
 
 <section class="result">
     <div class="result-description__wrapper">
-        <p class="result-description__text">9 results found.</p>
+        <p class="result-description__text">{{ page_cnt }} results found.</p>
     </div>
 
-    {% for equipment in demos %}
+    {% for equipment in data %}
     <div class="result-block">
         <div class="result-block-thumbnail__wrapper">
-            {% if 'link_image' in equipment %}
-            <img src="{{ equipment.link_image }}"
+            {% if 'images' in equipment %}
+            <img src="{{ equipment.images[0].link }}"
                  alt="{{ equipment.name }}"
                  class="result-block-thumbnail__img">
             {% else %}
@@ -108,6 +108,14 @@
         </div>
     </div>
     {% endfor %}
+
+    <ul class="result-pages__list">
+        {% for n in pages %}
+        <li class="result-pages__item">
+            <a href="/page/{{ loop.index }}">{{ loop.index }}</a>
+        </li>
+        {% endfor %}
+    </ul>
 
 </section>
 
