--- a/web/templates/results.html
+++ b/web/templates/results.html
@@ -17,7 +17,7 @@
         {% endif %}
     </div>
     <div class="result-block-name__wrapper">
-        <a href="#" class="result-block-name__link">{{ equipment.name }}</a>
+        <a href="/details/{{ equipment._id }}" class="result-block-name__link">{{ equipment.name }}</a>
     </div>
 </div>
 {% endfor %}
