--- a/web/static/css/top.css
+++ b/web/static/css/top.css
@@ -2,7 +2,7 @@
 
 .top {
     width: 100%;
-    height: 130px;
+    height: 120px;
     display: flex;
     background: whitesmoke;
     border-bottom: 1px solid gray;
@@ -23,15 +23,15 @@
 }
 
 .top-searchBox {
-    height: 48px;
+    height: 28px;
     max-width: 800px;
-    min-width: 300px;
+    min-width: 290px;
     margin: auto 0 auto auto;
     border: 1px solid gray;
     border-radius: 7px 0 0 7px;
     flex-grow: 1;
     font-size: 1em;
-    padding: 0;
+    padding: 10px 0 10px 10px;
 }
 
 .top-searchButton {
