--- a/web/templates/search.html
+++ b/web/templates/search.html
@@ -12,7 +12,7 @@
     <div class="top top-search__wrapper">
         <label for="top-searchBox" hidden>Search Box</label>
     <input type="text" class="top-searchBox" id="top-searchBox" />
-    <button class="top-searchButton">Search</button>
+    <button class="top-searchButton" id="top-searchButton">Search</button>
     </div>
 
     <div class="top top-login_wrapper">
