--- a/web/templates/about.html
+++ b/web/templates/about.html
@@ -1,7 +1,9 @@
+{% extends 'base.html' %}
+
+{% block header %}About{% endblock %}
+
 {% block content %}
 
-    {% block header %}
-        <h1 class="header-h1">{% block title %}About{% endblock %}</h1>
-    {% endblock %}
+    About
 
 {% endblock %}
