--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -4,15 +4,27 @@
     <meta charset="utf-8">
     <title>{% block header %}{% endblock %} - IME Inventory DB</title>
     <link rel="shortcut icon" href="{{ url_for('static', filename='assets/favicon.ico') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/base.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/navbar.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/overlay.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/footer.css') }}">
+    <script defer src="{{ url_for('static', filename='js/base.js') }}"></script>
+    {% block stylesheet %}{% endblock %}
     {% block script %}{% endblock %}
+    
+
 </head>
 <body>
 
 <section class="navbar">
-    <div ><a href="/">Search</a></div>
-    <div ><a href="/about">About</a></div>
+    <div><a href="/">Search</a></div>
+    <div><a href="/about">About</a></div>
+    {% if logged_in_user %}
+    <div><a href="/user/{{ logged_in_user[0] }}">{{ logged_in_user[1] }}</a></div>
+    <div><a href="/fetch/logout">Logout</a></div>
+    {% else %}
     <div id="login-trigger"><a>Login</a></div>
+    {% endif %}
 </section>
 
 <section class="overlay" >
