--- a/web/static/css/user.css
+++ b/web/static/css/user.css
@@ -1,10 +1,9 @@
-.user {
-    width: 100%;
-    max-width: 1200px;
-    margin: auto;
-    padding: 20px;
+.user-equipment li {
+    list-style-type: none;
+    display: flex;
+    margin: 20px
 }
 
-.user p {
-    margin: 10px 0;
+.user-equipment div {
+    margin: 0 0 0 auto;
 }
