--- a/web/static/css/result.css
+++ b/web/static/css/result.css
@@ -20,31 +20,31 @@
 .result-block {
     width: calc(20% - 45px);
     min-width: 200px;
-    height: 255px;
+    height: 245px;
     margin: 20px;
     border: 1px solid gray;
     border-radius: 7px;
 }
 
-.result-block-thumbnail__wrapper {
+.result-block-thumbnail {
     text-align: center;
     height: 160px;
     margin: 20px 0 10px;
 }
 
-.result-block-thumbnail__img {
+.result-block-thumbnail img {
     max-width: 160px;
     max-height: 160px;
 }
 
 .result-block-name__wrapper {
     text-align: center;
-    margin: 10px;
+    margin: 10px 20px;
+    height: 40px;
+    min-width: 160px;
+    overflow: hidden;
 }
 
-.result-block-name__link {
-    max-width: 160px;
-}
 
 .result-pages__list {
     width: 100%;
